SDA-4350 - Fix spacing and style of tooltip (#2010)

--- a/src/renderer/styles/call-notification.less
+++ b/src/renderer/styles/call-notification.less
@@ -309,19 +309,20 @@ text {
   left: 50%;
   width: auto;
   max-width: 200px;
+  min-width: 200px;
   white-space: pre-wrap;
   word-wrap: break-word;
   height: auto;
-  transform: translateX(-50%);
   opacity: 0;
+  font-family: @font-family;
   transition: opacity 0.3s, visibility 0.3s;
 }
 
 .tooltip-primary {
-  bottom: 50%;
+  transform: translateX(-50%) translateY(calc(-100% - 2px));
 }
 .tooltip-secondary {
-  bottom: 40%;
+  transform: translateX(-50%) translateY(calc(-100% - 20px));
 }
 
 .tooltip-trigger {
